Fix para o cálculo de gaps na position bar

--- a/src/components/positionBar/positionBar.scss
+++ b/src/components/positionBar/positionBar.scss
@@ -157,7 +157,7 @@
 	background: rgba(255, 200, 0, .8);
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 1), 0px -0.5px 6px rgba(50, 50, 50, 0.7);
 	text-align: center;
-	vartical-align: top;
+	vertical-align: top;
 	padding-top: 1px;
 	position: relative
 }
